kubernetes/ingress-rke.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rke
spec:
  backend:
    serviceName: kubernetes-dashboard
    servicePort: 80
